@@ -2,7 +2,7 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Scanner;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
+
 
 public class SortEvenNumbers {
     public static void main(String[] args) {
@@ -13,7 +13,7 @@ public class SortEvenNumbers {
                 .map(Integer::parseInt)
                 .filter(a -> a % 2 == 0)
                 //judge doesn't support .toList
-                .collect(Collectors.toList());
+                .toList();
 
 
         System.out.println(list.stream()
